--- a/frontend/assets/scss/main.css
+++ b/frontend/assets/scss/main.css
@@ -1,3 +1,9 @@
 body {
   font-family: 'Sarabun', sans-serif;
 }
+
+.btn-transparent {
+  background-color: transparent;
+  border-color: transparent;
+  color: inherit;
+}
